--- a/src/webhive.web/public_html/style.css
+++ b/src/webhive.web/public_html/style.css
@@ -1,5 +1,13 @@
 body {
-    font-family: Verdana;
+    font-family: -apple-system,
+            BlinkMacSystemFont,
+            "Segoe UI",
+            Roboto,
+            Oxygen-Sans,
+            Ubuntu,
+            Cantarell,
+            "Helvetica Neue",
+            sans-serif;
     font-size: large;
 }
 
@@ -33,4 +41,3 @@ nav > ul > li {
 .entry:nth-child(even) {
     background-color: #f4f4f4;
 }
-
