chore: Unwrap category from category collection ($lookup)

--- a/src/webhive.web/public_html/style.css
+++ b/src/webhive.web/public_html/style.css
@@ -9,6 +9,7 @@ body {
             "Helvetica Neue",
             sans-serif;
     font-size: large;
+    background: #fff;
 }
 
 main {
@@ -36,8 +37,25 @@ nav > ul > li {
 
 .entry {
     padding: 0.25em 0.25em;
+    display: grid;
+    grid-template-columns: 10% 1fr;
+    grid-column-gap: 0.5em;
+}
+
+.entry a {
+    color: #000;
 }
 
 .entry:nth-child(even) {
     background-color: #f4f4f4;
+}
+
+.entry__category {
+    border-radius: 0.25em;
+    background: #888;
+    color: #fff;
+    padding: 0 0.5em;
+    text-transform: capitalize;
+    white-space: nowrap;
+    overflow: hidden;
 }
