feat: Added more ants

--- a/src/webhive.web/public_html/style.css
+++ b/src/webhive.web/public_html/style.css
@@ -8,7 +8,7 @@ body {
             Cantarell,
             "Helvetica Neue",
             sans-serif;
-    font-size: large;
+    font-size: medium;
     background: #fff;
 }
 
