--- a/src/webhive.frontend/app.component/src/style.css
+++ b/src/webhive.frontend/app.component/src/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .logo {
-    transform: rotateX(180deg) translateY(-8px);
+    transform: translateY(-4px);
     display: inline-block;
     text-decoration: none;
     color: inherit;
