--- a/src/webhive.frontend/app.component/src/index.ejs
+++ b/src/webhive.frontend/app.component/src/index.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
-    <title>Web Hive</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 </body>
