Made search page pluggable

--- a/src/webhive.frontend/nav.component/src/nav.component.css
+++ b/src/webhive.frontend/nav.component/src/nav.component.css
@@ -7,6 +7,10 @@ nav > ul > li {
     display: inline-block;
 }
 
+nav > ul > li + li {
+    margin-left: 0.5em;
+}
+
 a {
     text-decoration: none;
     color: #ed0db1;
