--- a/src/webhive.frontend/nav.component/src/nav.component.html
+++ b/src/webhive.frontend/nav.component/src/nav.component.html
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/search">Search</a></li>
-    </ul>
+        <li>
+            <a href="/">Home</a>
+        </li></ul>
 </nav>
