--- a/src/webhive.web/public_html/style.css
+++ b/src/webhive.web/public_html/style.css
@@ -1,13 +1,6 @@
 body {
-    font-family: -apple-system,
-            BlinkMacSystemFont,
-            "Segoe UI",
-            Roboto,
-            Oxygen-Sans,
-            Ubuntu,
-            Cantarell,
-            "Helvetica Neue",
-            sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu,
+        Cantarell, 'Helvetica Neue', sans-serif;
     font-size: medium;
     background: #fff;
 }
@@ -33,6 +26,7 @@ nav > ul {
 
 nav > ul > li {
     display: inline-block;
+    padding-right: 0.5em;
 }
 
 .entry {
